# email-triage-env

./: Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.py
env/: environment.py
models/: schemas.py
server/: app.py
