[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
authors = [
    {name = "Pranav"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"